--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ div {
 }
 
 .navbar {
-    background-color: darkgrey;
+    background-color:  rgb(241, 241, 241);
     margin-bottom: 50px;
     padding: 20px;
 }
